--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,6 +29,9 @@
 </address>
 </div>
 </header>
+<svg class="" with="64" heigt="64">
+    <use href="./images/icons.svg#icon-antenna"></use>
+</svg>
     <main>        
         <section class="section-main">
             <div class="container">
