--- a/index.html
+++ b/index.html
@@ -36,27 +36,35 @@
             <button class="section-main-button" type="button">Order Service</button>
             </div>
         </section>
-        
         <section class="section-features">
             <div class="container">
                     <h2 class="visually-hidden">Features</h2>
-    <svg class="" with="64" heigt="64">
-         <use href="./images/icons.svg#icon-antenna"></use>
-    </svg>
-            <ul class="features-list">
+                <ul class="features-list">
                 <li class="feature-item">
+                    <svg class="feature-icon" width="64" height="64">
+                      <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
                     <h3 class="feature-title">Strategy</h3>
                     <p class="feature-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li class="feature-item">
+                    <svg class="feature-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-clock"></use>
+                      </svg>
                     <h3 class="feature-title">Punctuality</h3>
                     <p class="feature-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="feature-item">
+                    <svg class="feature-icon" width="64" height="64">
+                      <use href="./images/icons.svg#icon-diagram"></use>
+                    </svg>
                     <h3 class="feature-title">Diligence</h3>
                     <p class="feature-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="feature-item">
+                    <svg class="feature-icon" width="64" height="64">
+                      <use href="./images/icons.svg#icon-astronaut"></use>
+                    </svg>
                     <h3 class="feature-title">Technologies</h3>
                     <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
