--- a/index.html
+++ b/index.html
@@ -88,6 +88,27 @@
                             <div class="team-content">
                                 <h3 class="team-title-small">Mark Guerrero</h3>
                                 <p class="team-text">Product Designer</p>
+                                <div>
+                                <ul class="social-list">
+                                <li class="social-item">
+                                    <svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                                </li>
+                                <li class="social-item"><svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                                </li>
+                                <li><svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </li>
+                                <li><svg class="social-icon">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                                </li>
+                            </ul>
+                                </div>
                             </div>
                         </li>
                         <li class="team-item">
@@ -95,6 +116,26 @@
                             <div class="team-content">
                                 <h3 class="team-title-small">Tom Ford</h3>
                                 <p class="team-text">Frontend Developer</p>
+                                <div>
+                                    <ul class="social-list">
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                    </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                    </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                    </li>
+                                </ul>
+                                    </div>
                             </div>
                         </li>
                         <li class="team-item">
@@ -102,6 +143,26 @@
                             <div class="team-content">
                                 <h3 class="team-title-small">Camila Garcia</h3>
                                 <p class="team-text">Marketing</p>
+                                <div>
+                                    <ul class="social-list">
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                    </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                    </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                    </li>
+                                </ul>
+                                    </div>
                             </div>
                         </li>
                         <li class="team-item">
@@ -109,6 +170,26 @@
                             <div class="team-content">
                                 <h3 class="team-title-small">Daniel Wilson</h3>
                                 <p class="team-text">UI Designer</p>
+                                <div>
+                                    <ul class="social-list">
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                    </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                    </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </li>
+                                    <li><svg class="social-icon">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                    </li>
+                                </ul>
+                                    </div>
                             </div>
                  </li>    
                     </ul>
