--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                                 </li>
-                                <li class="social-item"><svg class="social-icon">
+                                <li class="social-item"><svg class="social-icon" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                                 </li>
-                                <li><svg class="social-icon">
+                                <li class="social-item"><svg class="social-icon" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </li>
-                                <li><svg class="social-icon">
+                                <li class="social-item"><svg class="social-icon" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                                 </li>
@@ -118,19 +118,19 @@
                                 <p class="team-text">Frontend Developer</p>
                                 <div>
                                     <ul class="social-list">
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                     </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                     </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                     </li>
@@ -145,19 +145,19 @@
                                 <p class="team-text">Marketing</p>
                                 <div>
                                     <ul class="social-list">
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                     </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                     </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                     </li>
@@ -172,19 +172,19 @@
                                 <p class="team-text">UI Designer</p>
                                 <div>
                                     <ul class="social-list">
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                     </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                     </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </li>
-                                    <li><svg class="social-icon">
+                                    <li class="social-item"><svg class="social-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                     </li>
