--- a/index.html
+++ b/index.html
@@ -269,6 +269,25 @@
             <a class="footer-logo" href="/index.html">Web<span class="logo-part">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
+        <h3 class="footer-socials-title">Social media</h3>
+        <ul class="footer-socials">
+            <li class="social-item"><svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+            </li>
+            <li class="social-item"><svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+            </li>
+            <li class="social-item"><svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+        </li>
+            <li class="social-item"><svg class="social-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
