--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
                                 <p class="team-text">Product Designer</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -127,28 +127,28 @@
                                 <p class="team-text">Frontend Developer</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -164,28 +164,28 @@
                                 <p class="team-text">Marketing</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -201,28 +201,28 @@
                                 <p class="team-text">UI Designer</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="#">
+                                      <a href="social-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -243,7 +243,6 @@
                        <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                     <img src="./images/img-5.jpg" alt="Banking app interface" width="360" height="300">
-
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Banking App</h3>
                         <p class="portfolio-title-small">App</p>
@@ -314,28 +313,28 @@
         <ul class="socials-list">
             <li class="social-item">
               <a href="#" class="social-link">
-              <svg class="social-icon" width="16" height="16">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
             </li>
             <li class="social-item">
               <a href="#" class="social-link">
-              <svg class="social-icon" width="16" height="16">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
             </li>
             <li class="social-item">
               <a href="#" class="social-link">
-              <svg class="social-icon" width="16" height="16">
+              <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
           <a href="#" class="social-link">
-          <svg class="social-icon" width="16" height="16">
+          <svg class="social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </a>
