--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <div class="portfolio-overlay">
                        <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
-                    <img src="./images/img-5.jpg" alt="Banking app interface" width="360" height="300">
+                    <div><img src="./images/img-5.jpg" alt="Banking app interface" width="360" height="300"></div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Banking App</h3>
                         <p class="portfolio-title-small">App</p>
@@ -252,7 +252,7 @@
                     <div class="portfolio-overlay">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
-                    <img src="./images/img-6.jpg" alt="Cashless payment terminal" width="360" height="300">
+                    <div><img src="./images/img-6.jpg" alt="Cashless payment terminal" width="360" height="300"></div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Cashless Payment</h3>
                         <p class="portfolio-title-small">Marketing</p>
@@ -262,7 +262,7 @@
                     <div class="portfolio-overlay">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
-                    <img src="./images/img-7.jpg" alt="Meditation app on smartphone screen" width="360" height="300">
+                    <div><img src="./images/img-7.jpg" alt="Meditation app on smartphone screen" width="360" height="300"></div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Meditation App</h3>
                         <p class="portfolio-title-small">App</p>
@@ -272,7 +272,7 @@
                     <div class="portfolio-overlay">
                         <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
-                    <img src="./images/img-8.jpg" alt="Taxi service app interface" width="360" height="300">
+                    <div><img src="./images/img-8.jpg" alt="Taxi service app interface" width="360" height="300"></div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Taxi Service</h3>
                         <p class="portfolio-title-small">Marketing</p>
@@ -282,7 +282,7 @@
                     <div class="portfolio-overlay">
                        <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
-                    <img src="./images/img-9.jpg" alt="Illustrations on device screen" width="360" height="300">
+                    <div><img src="./images/img-9.jpg" alt="Illustrations on device screen" width="360" height="300"></div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Screen Illustrations</h3>
                         <p class="portfolio-title-small">Design</p>
@@ -292,7 +292,7 @@
                     <div class="portfolio-overlay">
                        <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
-                    <img src="./images/img-10.jpg" alt="Young woman smiling while studying online" width="360" height="300">
+                    <div><img src="./images/img-10.jpg" alt="Young woman smiling while studying online" width="360" height="300"></div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Online Courses</h3>
                         <p class="portfolio-title-small">Marketing</p>
