--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
                                 <p class="team-text">Product Designer</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="instagram-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="facebook-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="twitter-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="linkedin-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -127,28 +127,28 @@
                                 <p class="team-text">Frontend Developer</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="instagram-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="facebook-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="twitter-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="linkedin-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -164,28 +164,28 @@
                                 <p class="team-text">Marketing</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="instagram-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="facebook-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="twitter-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="linkedin-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -201,28 +201,28 @@
                                 <p class="team-text">UI Designer</p>
                                 <ul class="social-list">
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="instagram-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="facebook-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="twitter-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                       </a>
                                     </li>
                                     <li class="social-item">
-                                      <a href="social-link">
+                                      <a href="linkedin-link">
                                         <svg class="social-icon" width="16" height="16">
                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
