--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
               <a class="footer-logo" href="/index.html">Web<span class="logo-part">Studio</span></a>
               <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
           </div>
-          <div class="footer-socials-container" width="280" height="80">
-              <p class="footer-socials-title">Social media</p>
-              <ul class="socials-list">
+          <div class="footer-social" width="280" height="80">
+              <p class="social-title">Social media</p>
+              <ul class="social-list">
                   <li class="social-item">
                       <a href="#" class="social-link">
                           <svg class="social-icon" width="24" height="24">
