--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <a class="footer-logo" href="/index.html">Web<span class="logo-part">Studio</span></a>
               <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
           </div>
-          <div class="footer-social" width="280" height="80">
+          <div class="footer-social">
               <p class="social-title">Social media</p>
               <ul class="social-list">
                   <li class="social-item">
