--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           </div>
           <div class="footer-social">
               <p class="social-title">Social media</p>
-              <ul class="social-list">
+              <ul class="social-list-footer">
                   <li class="social-item">
                       <a href="#" class="social-link">
                           <svg class="social-icon" width="24" height="24">
